<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.kindabookstore.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.example.kindabookstore.ui.contact.ContactFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.kindabookstore.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_navigation_cart_to_paymentFragment"
            app:destination="@id/paymentFragment" />
    </fragment>
    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.example.kindabookstore.ui.payment.PaymentFragment"
        android:label="fragment_payment"
        tools:layout="@layout/fragment_payment" >
        <action
            android:id="@+id/action_paymentFragment_to_navigation_cart"
            app:destination="@id/navigation_cart" />
    </fragment>
    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.example.kindabookstore.ui.onboarding.OnboardingFragment"
        android:label="fragment_onboarding"
        tools:layout="@layout/fragment_onboarding" />
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.kindabookstore.ui.login.SignUpFragment"
        android:label="fragment_sign_up"
        tools:layout="@layout/fragment_sign_up" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.kindabookstore.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />
</navigation>